Make part casting and composite recipes use a single animated recipe rather than a list of recipes for display
Reducing the number of recipes shown in JEI by a large number, as its a lot of duplicate info